Done add Method (GET, POST, PUT, DELETE)
